src/objects/ExtendedData__mdt.object
<CustomObject>
    <fields>
        <fullName>MetaData_Display_Field__c</fullName>
        <label>MetaData Display Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetaData_EnumKey_Field__c</fullName>
        <label>MetaData Key Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetaData_Type__c</fullName>
        <label>MetaData Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AccountCategoryBean__mdt</fullName>
                    <default>true</default>
                    <label>AccountCategoryBean__mdt</label>
                </value>
                <value>
                    <fullName>AccountSegmentMapBean__mdt</fullName>
                </value>
                <value>
                    <fullName>AccountType__mdt</fullName>
                </value>
                <value>
                    <fullName>AddressTypeBean__mdt</fullName>
                </value>
                <value>
                    <fullName>BillDispatchMethodBean__mdt</fullName>
                </value>
                <value>
                    <fullName>BillFmtOptBean__mdt</fullName>
                </value>
                <value>
                    <fullName>BillPeriodBean__mdt</fullName>
                </value>
                <value>
                    <fullName>BillingFrequencyBean__mdt</fullName>
                </value>
                <value>
                    <fullName>CountryCodeBean__mdt</fullName>
                </value>
                <value>
                    <fullName>ExtendedData__mdt</fullName>
                </value>
                <value>
                    <fullName>MktCodeBean__mdt</fullName>
                </value>
                <value>
                    <fullName>PrivacyLevelBean__mdt</fullName>
                </value>
                <value>
                    <fullName>RateClassDescrBean__mdt</fullName>
                </value>
                <value>
                    <fullName>RateCurrencyBean__mdt</fullName>
                </value>
                <value>
                    <fullName>SalesChannelBean__mdt</fullName>
                </value>
                <value>
                    <fullName>TimezoneBean__mdt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ExtendedData</label>
    <pluralLabel>ExtendedData</pluralLabel>
</CustomObject>